namespace Data.Extensions.ExtensionModels;
public class ApplicationOptions
{
    public string ConnectionString { get; set; } = string.Empty;
}
